--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+commonmark==0.9.1
 Django==4.2.6
+idna==3.4
+jisho-api==0.1.8
+pydantic==1.10.13
+Pygments==2.16.1
+requests==2.31.0
+rich==10.16.2
+soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.6
