--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ httpx==0.23.3
 idna==3.4
 jisho-api==0.1.8
 logzero==1.7.0
+psycopg2==2.9.9
 pydantic==1.10.13
 Pygments==2.16.1
+python-dotenv==1.0.0
 requests==2.31.0
 rfc3986==1.5.0
 rich==10.16.2
