--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 commonmark==0.9.1
+crispy-bootstrap5==0.7
 Django==4.2.6
+django-crispy-forms==2.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
