--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
 anyio==4.0.0
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
 beautifulsoup4==4.12.2
 bing-image-urls==0.1.5
 bs4==0.0.1
@@ -11,12 +15,15 @@ commonmark==0.9.1
 crispy-bootstrap5==0.7
 Django==4.2.6
 django-crispy-forms==2.0
+frozenlist==1.4.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
 jisho-api==0.1.8
 logzero==1.7.0
+multidict==6.0.4
+openai==0.28.1
 psycopg2-binary==2.9.9
 pydantic==1.10.13
 Pygments==2.16.1
@@ -27,6 +34,9 @@ rich==10.16.2
 sniffio==1.3.0
 soupsieve==2.5
 sqlparse==0.4.4
+supermemo2==2.0.0
+tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==1.26.6
+yarl==1.9.2
