--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.6
 aiosignal==1.3.1
-anyio==4.0.0
+anyio==3.7.1
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
@@ -13,6 +13,8 @@ click==8.1.7
 colorama==0.4.6
 commonmark==0.9.1
 crispy-bootstrap5==0.7
+decorator==4.4.2
+distro==1.8.0
 Django==4.2.6
 django-crispy-forms==2.0
 frozenlist==1.4.0
@@ -20,10 +22,14 @@ h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
+imageio==2.32.0
+imageio-ffmpeg==0.4.9
 jisho-api==0.1.8
 logzero==1.7.0
 multidict==6.0.4
 openai==1.3.3
+Pillow==10.0.1
+proglog==0.1.10
 psycopg2-binary==2.9.9
 pydantic==1.10.13
 Pygments==2.16.1
