--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ httpx==0.23.3
 idna==3.4
 imageio==2.32.0
 imageio-ffmpeg==0.4.9
+Janome==0.5.0
 jisho-api==0.1.8
 logzero==1.7.0
 multidict==6.0.4
