--- a/requirements.txt
+++ b/requirements.txt
@@ -32,9 +32,11 @@ Pillow==10.0.1
 proglog==0.1.10
 psycopg2-binary==2.9.9
 pydantic==1.10.13
+Pygments==2.16.1
 python-dotenv==1.0.0
 requests==2.31.0
 rfc3986==1.5.0
+rich==10.16.2
 sniffio==1.3.0
 soupsieve==2.5
 sqlparse==0.4.4
