--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,31 @@
-aiohttp==3.8.6
-aiosignal==1.3.1
+annotated-types==0.6.0
 anyio==3.7.1
 asgiref==3.7.2
-async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 commonmark==0.9.1
-crispy-bootstrap5==0.7
-decorator==4.4.2
+crispy-bootstrap5==2023.10
 distro==1.8.0
 Django==4.2.6
 django-crispy-forms==2.0
-frozenlist==1.4.0
 h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
-imageio==2.32.0
-imageio-ffmpeg==0.4.9
 Janome==0.5.0
 jisho-api==0.1.8
-logzero==1.7.0
-multidict==6.0.4
 openai==1.3.3
-Pillow==10.0.1
-proglog==0.1.10
 psycopg2-binary==2.9.9
 pydantic==1.10.13
-Pygments==2.16.1
+pydantic_core==2.14.3
+Pygments==2.17.1
 python-dotenv==1.0.0
 requests==2.31.0
-rfc3986==1.5.0
 rich==10.16.2
 sniffio==1.3.0
 soupsieve==2.5
@@ -44,4 +34,4 @@ supermemo2==2.0.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
-urllib3==1.26.6
+urllib3==2.1.0
