--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,8 @@ openai==1.3.3
 psycopg2-binary==2.9.9
 pydantic==2.5.1
 pydantic_core==2.14.3
-python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
-six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 sqlparse==0.4.4
@@ -29,4 +27,4 @@ supermemo2==2.0.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
-urllib3==1.26.6
+urllib3===1.26.6
