change function timeout setting vercel

--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,10 @@
         "src": "/(.*)",
         "dest": "config/wsgi.py"
       }
-    ]
+    ],
+    "functions": {
+      "dictionary/views.py": {
+        "maxDuration": 30
+      }
+    }
   }
